01/25/25: 
    Made preliminary files

01/26/2025:
    set up initial structure of main .c file
    made some test code to get familiar with things

01/27/2025:
    fleshed out method signatures
    clarified direction of project

01/28/2025:
    Finalized plan, starting coding
    Played around with some code to better understand how C handles arrays

01/29/2025:
    Finished section to create the arrays
    Finished section that populates the array with random letters
    