@@ -1,0 +1,3 @@
+{
+    "C_Cpp.errorSquiggles": "disabled"
+}
