@@ -1,8 +1,5 @@
 wordgen:
 	gcc -Wall -g wordgen.c -o wordgen
 
-test:
-	gcc -Wall -g test.c -o test
-
 clean:
-	rm -f *.o wordgen test
+	rm -f *.o wordgen
