@@ -16,4 +16,11 @@
 01/29/2025:
     Finished section to create the arrays
     Finished section that populates the array with random letters
+    Finished section that adds the words
+    NOTES:
+        - The program will just exit if it cannot fit ALL words into the grid. 10 is usually enough space.
+        - I decided to use a 1D array, because 2D arrays were being annoying
+        - error checking is rudimentary
+        - could enhance to handle overlapping words being placed, maybe have a bank that stores
+            used indices or something, and check through that.
     
